# snipget-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/snipget/: __init__.py  _client.py  _exceptions.py  _response.py
tests/: _helpers.py  conftest.py  test_async.py  test_client.py  test_errors.py  test_retry.py
